@@ -111,7 +111,7 @@ class Smarty extends Smarty_Internal_TemplateBase
     /**
      * smarty version
      */
-    const SMARTY_VERSION = '3.1.24-dev/1';
+    const SMARTY_VERSION = '3.1.24-dev/2';
 
     /**
      * define variable scopes
