@@ -1,6 +1,7 @@
 ﻿ ===== 3.1.24.dev ===== (xx.xx.2015)
   - bugfix {$smarty.constant.TEST} did fail  on undefined constant https://github.com/smarty-php/smarty/issues/28
   - bugfix access to undefined config variable like {#undef#} did fail https://github.com/smarty-php/smarty/issues/29
+  - bugfix in nested {foreach} saved item attributes got overwritten https://github.com/smarty-php/smarty/issues/33
 
  ===== 3.1.23 ===== (12.05.2015)
  12.05.2015
